Fix mobile version alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,18 +12,18 @@ html {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  min-width: 375px;
+  min-width: 23.438em;
   margin-top: 0;
   margin-left: -10px;
   background-color: #e5e5e5;
 }
 
-.con1 {
+.header-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
   flex-direction: row;
-  min-width: 375px;
+  min-width: 23.438em;
   height: auto;
   background-color: #fff;
   padding-top: 58px;
@@ -36,7 +36,7 @@ html {
   font-weight: 700;
   line-height: 20px;
   width: 89px;
-  color: #6070ff;
+  color: #6070FF;
   text-decoration: none;
 }
 
@@ -45,7 +45,7 @@ html {
   left: -35px;
   height: 12px;
   width: 18px;
-  color: #6070ff;
+  color: #6070FF;
   text-decoration: none;
 }
 
@@ -63,7 +63,7 @@ html {
   margin-top: 103px;
   margin-bottom: 12px;
   margin-left: 24px;
-  color: #172b4d;
+  color: #172B4D;
 }
 
 .hero-description {
@@ -81,14 +81,14 @@ html {
 
 section {
   height: 718px;
-  max-width: 375px;
+  max-width: 23.438em;
 }
 
 .Homepage {
   background-image: url(https://raw.githubusercontent.com/steveWDamesJr/Microverse-Portfolio/main/images/background.png);
   border-bottom-left-radius: 70px;
   background-repeat: no-repeat;
-  width: 375px;
+  width: 23.438em;
   height: 718px;
   background-size: contain;
   background-color: #fff;
@@ -113,7 +113,7 @@ section {
   margin-bottom: 12px;
   margin-left: 24px;
   line-height: 24px;
-  color: #7f8cff;
+  color: #7F8CFF;
 }
 
 .card {
@@ -128,7 +128,7 @@ section {
   background-color: #fff;
   margin-top: 87px;
   left: calc(50% - 327px / 2);
-  color: #172b4d;
+  color: #172B4D;
 }
 
 .card-img {
@@ -181,7 +181,7 @@ section {
   left: 67px;
   top: 12px;
   border-radius: 0;
-  color: #c1c7d0;
+  color: #C1C7D0;
 }
 
 .art-name {
@@ -194,7 +194,7 @@ section {
   width: 89px;
   left: 0;
   top: 8px;
-  color: #7a869a;
+  color: #7A869A;
 }
 
 .year {
@@ -207,7 +207,7 @@ section {
   width: 29px;
   left: 0;
   top: 8px;
-  color: #7a869a;
+  color: #7A869A;
 }
 
 .card-description {
@@ -236,19 +236,19 @@ section {
 
 .languages {
   padding: 4px 12px;
-  background-color: #ebebff;
-  color: #6070ff;
-  border: 1px solid #ebebeb;
+  background-color: #EBEBFF;
+  color: #6070FF;
+  border: 1px solid #EBEBEB;
   border-radius: 8px;
   font-size: 12px;
 }
 
 .card-button {
   padding: 12px;
-  border: 1px solid #6070ff;
+  border: 1px solid #6070FF;
   border-radius: 8px;
   text-decoration: none;
-  color: #396df2;
+  color: #396DF2;
   font-weight: 500;
   font-size: 17px;
   line-height: 24px;
@@ -264,7 +264,7 @@ section {
   height: 24px;
   left: 252px;
   top: calc(50% - 48px / 2 + 57.5px);
-  background: #6070ff;
+  background: #6070FF;
   box-shadow: 0 8px 16px rgba(64, 83, 252, 0.24);
   border-radius: 8px;
   color: #fff;
@@ -276,7 +276,7 @@ section {
   height: 24px;
   left: 407px;
   top: calc(50% - 48px / 2 + 57.5px);
-  background: #2230d2;
+  background: #2230D2;
   border-radius: 8px;
   color: #fff;
 }
@@ -287,7 +287,7 @@ section {
   height: 24px;
   left: 564px;
   top: calc(50% - 48px / 2 + 57.5px);
-  border: 1px solid #c1c7d0;
+  border: 1px solid #C1C7D0;
   box-sizing: border-box;
   border-radius: 8px;
 }
@@ -306,8 +306,8 @@ section {
   justify-items: center;
   gap: 1em;
   margin-top: -67px;
-  width: 375px;
-  background-color: #f7f7f9;
+  width: 23.438em;
+  background-color: #F7F7F9;
   height: auto;
   padding-top: 100px;
 }
@@ -315,7 +315,7 @@ section {
 .about-me-card {
   border-top-right-radius: 70px;
   background-repeat: no-repeat;
-  width: 375px;
+  width: 23.438em;
   height: auto;
   background-size: contain;
   background-color: #fff;
@@ -333,15 +333,15 @@ section {
   margin-top: 103px;
   margin-bottom: 12px;
   margin-left: 24px;
-  color: #172b4d;
+  color: #172B4D;
 }
 
 .card-button2 {
   padding: 12px;
-  border: 1px solid #6070ff;
+  border: 1px solid #6070FF;
   border-radius: 8px;
   text-decoration: none;
-  color: #396df2;
+  color: #396DF2;
   font-weight: 500;
   font-size: 17px;
   line-height: 24px;
@@ -353,7 +353,7 @@ section {
 
 .card-button2:hover {
   padding: 12px;
-  border: 1px solid #6070ff;
+  border: 1px solid #6070FF;
   border-radius: 8px;
   text-decoration: none;
   font-weight: 500;
@@ -364,14 +364,14 @@ section {
   left: 12px;
   top: 12px;
   top: calc(50% - 48px / 2 + 57.5px);
-  background: #6070ff;
+  background: #6070FF;
   box-shadow: 0 8px 16px rgba(64, 83, 252, 0.24);
   color: #fff;
 }
 
 .card-button2:focus {
   padding: 12px;
-  border: 1px solid #6070ff;
+  border: 1px solid #6070FF;
   border-radius: 8px;
   text-decoration: none;
   font-weight: 500;
@@ -382,7 +382,7 @@ section {
   left: 12px;
   top: 12px;
   top: calc(50% - 48px / 2 + 57.5px);
-  background: #2230d2;
+  background: #2230D2;
   color: #fff;
 }
 
@@ -398,7 +398,7 @@ section {
   left: 12px;
   top: 12px;
   top: calc(50% - 48px / 2 + 57.5px);
-  border: 1px solid #c1c7d0;
+  border: 1px solid #C1C7D0;
   box-sizing: border-box;
 }
 
@@ -467,7 +467,7 @@ section {
 
 .programs {
   display: flex;
-  background-color: #f7f7f9;
+  background-color: #F7F7F9;
   padding: 7px 0 7px 15px;
   border-radius: 8px;
 }
@@ -505,12 +505,12 @@ section {
   background-image: url(https://raw.githubusercontent.com/steveWDamesJr/Microverse-Portfolio/Feature-Contact-Form/images/con-shapes.png);
   background-size: cover;
   background-repeat: no-repeat;
-  width: 375px;
+  width: 23.438em;
   height: 836px;
   margin-top: -114px;
   left: 0;
   top: 5410px;
-  background-color: #6070ff;
+  background-color: #6070FF;
   border-top-left-radius: 70px;
 }
 
@@ -523,17 +523,13 @@ section {
 }
 
 .contact-me {
-  width: 375px;
   height: 56px;
   top: 4734px;
   font-style: normal;
   font-weight: bold;
   font-size: 40px;
   line-height: 52px;
-  display: flex;
-  align-items: center;
   text-align: center;
-  justify-content: center;
   color: #fff;
   margin: 0;
   padding-top: 115px;
@@ -549,7 +545,7 @@ section {
   font-size: 20px;
   line-height: 28px;
   text-align: center;
-  color: #ebebff;
+  color: #EBEBFF;
   margin-bottom: 80px;
   margin-left: 20px;
 }
@@ -564,7 +560,7 @@ section {
   background: #fff;
   font-size: 17px;
   line-height: 20px;
-  color: #172b4d;
+  color: #172B4D;
   border: none;
   text-indent: 16px;
 }
@@ -579,10 +575,10 @@ section {
   font-weight: normal;
   font-size: 17px;
   line-height: 20px;
-  color: #172b4d;
+  color: #172B4D;
   border-radius: 8px;
   background: #fff;
-  border: 1px solid #cfd8dc;
+  border: 1px solid #CFD8DC;
   margin-bottom: 10px;
   text-indent: 16px;
 }
@@ -591,8 +587,7 @@ section {
   font-weight: normal;
   font-size: 15px;
   line-height: 24px;
-  color: #b3bac5;
-  padding-top: 10px;
+  color: #B3BAC5;
 }
 
 textarea {
@@ -619,7 +614,7 @@ textarea {
   line-height: 24px;
   text-align: center;
   letter-spacing: 0.03em;
-  color: #6070ff;
+  color: #6070FF;
   font-style: normal;
   border: none;
 }
@@ -636,7 +631,7 @@ textarea {
   height: 48px;
   left: 12px;
   top: 12px;
-  background: #6070ff;
+  background: #6070FF;
   box-shadow: 0 8px 16px rgba(64, 83, 252, 0.24);
   color: #fff;
 }
@@ -653,7 +648,7 @@ textarea {
   height: 48px;
   left: 12px;
   top: 12px;
-  background: #2230d2;
+  background: #2230D2;
   box-shadow: 0 8px 16px rgba(64, 83, 252, 0.24);
   color: #fff;
 }
